--- a/index.html
+++ b/index.html
@@ -333,6 +333,76 @@
             font-size: 24px;
             font-weight: bold;
         }
+
+        .modal-overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.7);
+            z-index: 1000;
+        }
+
+        .modal-content {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            max-width: 90%;
+            width: 400px;
+            z-index: 1001;
+        }
+
+        .modal-header {
+            font-size: 24px;
+            font-weight: bold;
+            margin-bottom: 20px;
+            color: #4CAF50;
+        }
+
+        .modal-stats {
+            margin: 15px 0;
+            padding: 10px;
+            background-color: #f5f5f5;
+            border-radius: 5px;
+        }
+
+        .countdown {
+            font-size: 18px;
+            margin: 15px 0;
+            color: #666;
+        }
+
+        .share-button {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+            margin-top: 15px;
+        }
+
+        .share-button:hover {
+            background-color: #45a049;
+        }
+
+        .close-modal {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            cursor: pointer;
+            font-size: 20px;
+            color: #666;
+        }
     </style>
 </head>
 
@@ -428,7 +498,24 @@
         </div>
     </div>
 
-
+    <!-- Add this HTML to your page -->
+    <div id="winModal" class="modal-overlay">
+        <div class="modal-content">
+            <span class="close-modal" onclick="closeWinModal()">×</span>
+            <div class="modal-header">🎉 Congratulations! 🎉</div>
+            <div class="modal-stats">
+                <p>You solved it in <span id="moveCount">0</span> moves!</p>
+                <p>Grid Size: <span id="gridSizeDisplay">4x4</span></p>
+                <p>Play Date: <span id="playDate">Date</span></p>
+            </div>
+            <div class="countdown">
+                Next puzzle in: <span id="countdownTimer">00:00:00</span>
+            </div>
+            <button class="share-button" onclick="shareResult()">
+                Share Result
+            </button>
+        </div>
+    </div>
     <footer class="footer">
         <p>&copy; 2024 Manish Pandey. All rights reserved.</p>
     </footer>
@@ -543,6 +630,76 @@
 
             */
         }
+
+        function showWinModal() {
+            const modal = document.getElementById('winModal');
+            document.getElementById('moveCount').textContent = movesCounter;
+            document.getElementById('gridSizeDisplay').textContent = `${gridN}x${gridN}`;
+            document.getElementById('playDate').textContent = new Date().toLocaleDateString();
+            modal.style.display = 'block';
+            updateCountdown();
+            // Start countdown update interval
+            setInterval(updateCountdown, 1000);
+        }
+
+        function closeWinModal() {
+            document.getElementById('winModal').style.display = 'none';
+        }
+
+        function updateCountdown() {
+            const now = new Date();
+            const midnight = new Date();
+            midnight.setHours(24, 0, 0, 0);
+
+            const diff = midnight - now;
+
+            const hours = Math.floor(diff / (1000 * 60 * 60));
+            const minutes = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
+            const seconds = Math.floor((diff % (1000 * 60)) / 1000);
+
+            const timeString = `${String(hours).padStart(2, '0')}:${String(minutes).padStart(2, '0')}:${String(seconds).padStart(2, '0')}`;
+            document.getElementById('countdownTimer').textContent = timeString;
+        }
+
+        async function shareResult() {
+            const shareText = `🧩 Hindi Matrix Puzzle\n` +
+                `Grid: ${gridN}x${gridN}\n` +
+                `Moves: ${movesCounter}\n` +
+                `Come play with me! 🎮\n` +
+                `bit.ly/49D6YmZ`
+                ;
+
+            if (navigator.share) {
+                try {
+                    await navigator.share({
+                        title: 'Hindi Matrix Puzzle',
+                        text: shareText
+                    });
+                } catch (err) {
+                    fallbackShare(shareText);
+                }
+            } else {
+                fallbackShare(shareText);
+            }
+        }
+
+        function fallbackShare(text) {
+            // Create temporary textarea
+            const textarea = document.createElement('textarea');
+            textarea.value = text;
+            document.body.appendChild(textarea);
+
+            // Select and copy text
+            textarea.select();
+            document.execCommand('copy');
+
+            // Remove temporary textarea
+            document.body.removeChild(textarea);
+
+            // Show feedback
+            alert('Result copied to clipboard!');
+        }
+
     </script>
 </body>
 
