--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
     <div class="content">
         <div class="grid-container" id="grid"></div>
         <div class="text-center mt-3 button-container">
-            <p>Steps:<span id="movesCounter">0</span></p>
+            <p>Steps:&nbsp;<span id="movesCounter">0</span></p>
             <button style="display: none;" class="btn btn-secondary custom-button" id="resetBtn">Reset | नए
                 शब्द</button>
         </div>
