--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
+
     <title>Hindi Words Formation - हिन्दी शब्द रचना</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -23,9 +23,13 @@
             --selected-item: #0f0f0f;
             --selected-text: #889487;
             --correct-item-bg: #98FB98;
-            ;
             --border-color: #dee2e6;
             --hover-color: #007bff;
+            --secondary-bg-color: #f5f5f5;
+            --correct-item-bg: #4CAF50;
+            --correct-item-hover: #45a049;
+            --button-text: #0a0c0a;
+            --button-text-hover: #ffffff;
         }
 
         body.dark-mode {
@@ -37,6 +41,11 @@
             --selected-text: #0a0a0a;
             --border-color: #444444;
             --hover-color: #66b0ff;
+            --secondary-bg-color: #444444;
+            --correct-item-bg: #4CAF50;
+            --correct-item-hover: #45a049;
+            --button-text: #0a0c0a;
+            --button-text-hover: #ffffff;
         }
 
         body {
@@ -61,8 +70,16 @@
         .left-section {
             display: flex;
             align-items: center;
-            gap: 20px;
+            gap: 10px;
         }
+
+        
+        .right-section {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
 
         .burger-menu {
             cursor: pointer;
@@ -307,7 +324,7 @@
 
         .grid-item.correct {
             background-color: var(--correct-item-bg);
-            color: var(--selected-text);
+            color: var(--button-text);
         }
 
         .grid-item.selected {
@@ -333,6 +350,7 @@
             width: 100%;
             font-size: 24px;
             font-weight: bold;
+
         }
 
         .modal-overlay {
@@ -351,7 +369,7 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            background-color: white;
+            color: var(--text-color);
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -365,35 +383,56 @@
             font-size: 24px;
             font-weight: bold;
             margin-bottom: 20px;
-            color: #4CAF50;
+            color: var(--correct-item-bg);
         }
 
         .modal-stats {
             margin: 15px 0;
             padding: 10px;
-            background-color: #f5f5f5;
+            background-color: var(--secondary-bg-color, #f5f5f5);
             border-radius: 5px;
         }
 
         .countdown {
             font-size: 18px;
             margin: 15px 0;
-            color: #666;
+            color: var(--text-color);
         }
 
         .share-button {
-            background-color: #4CAF50;
-            color: white;
+            background-color: var(--correct-item-bg);
+            color: var(--selected-text);
             border: none;
             padding: 10px 20px;
             border-radius: 5px;
             cursor: pointer;
             font-size: 16px;
             margin-top: 15px;
+            transition: background-color 0.3s;
+        }
+
+        .reshare-button {
+            width: 40%;
+            font-size: 24px;
+            font-weight: bold;
+            background-color: var(--correct-item-bg);
+            color: var(--button-text);
+            border: none;
+            padding: 5px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+            margin-top: 15px;
+            transition: background-color 0.3s;
+        }
+
+        .reshare-button:hover {
+            background-color: var(--correct-item-hover, #45a049);
+            color: var(--hover-color-hover);
         }
 
         .share-button:hover {
-            background-color: #45a049;
+            background-color: var(--correct-item-hover, #45a049);
         }
 
         .close-modal {
@@ -402,7 +441,7 @@
             right: 10px;
             cursor: pointer;
             font-size: 20px;
-            color: #666;
+            color: var(--button-text);
         }
     </style>
 </head>
@@ -420,8 +459,16 @@
             </div>
         </div>
         <div class="title"><span id="gridSize">3x3</span>&nbsp;हिन्दी शब्द रचना</div>
-        <div class="settings-menu" onclick="toggleMenu('right')">
-            <i class="fas fa-cog"></i>
+        <div class="right-section">
+            <div id="divStats" onclick="showWinModal()" style="display: none;"> <svg xmlns="http://www.w3.org/2000/svg" height="24"
+                    viewBox="0 0 24 24" width="24">
+                    <path fill="var(--text-color)"
+                        d="M16,11V3H8v6H2v12h20V11H16z M10,5h4v14h-4V5z M4,11h4v8H4V11z M20,19h-4v-6h4V19z"></path>
+                </svg>
+            </div>
+            <div class="settings-menu" onclick="toggleMenu('right')">
+                <i class="fas fa-cog"></i>
+            </div>
         </div>
     </div>
 
@@ -492,8 +539,8 @@
 
     <div class="content">
         <div class="grid-container" id="grid"></div>
-        <div class="text-center mt-3 button-container">
-            <p>Steps:&nbsp;<span id="movesCounter">0</span></p>
+        <div class="text-center mt-3 button-container" style="vertical-align: middle;">
+            <span style="margin: auto;">Steps:&nbsp;<span id="movesCounter">0</span></span>
             <button style="display: none;" class="btn btn-secondary custom-button" id="resetBtn">Reset | नए
                 शब्द</button>
         </div>
