--- a/index.html
+++ b/index.html
@@ -402,6 +402,7 @@
             min-width: 50%;
             text-align: right;
             border-right: 1px #0a0a0a;
+            font-weight: bold;
         }
 
         .model-row {
@@ -451,7 +452,8 @@
             right: 10px;
             cursor: pointer;
             font-size: 20px;
-            color: var(--button-text);
+            font-weight: bold;
+            color: var(--text-color);
         }
 
         .main-container {
@@ -633,18 +635,18 @@
                 <hr size="1" />
             </div>
             <div class="modal-row">
-                <p id="pWin" style="display: none;">You solved it in <span id="moveCount1">0</span> moves!</p>
-                <p id="pPlay">You have used <span id="moveCount2">0</span> moves!</p>
-                <p>Grid Size: <span id="gridSizeDisplay">4x4</span></p>
+                <p id="pWin" style="display: none;">आपने <span id="moveCount1">0</span> चाल में सुलझा लिया!</p>
+                <p id="pPlay">अब तक <span id="moveCount2">0</span> चालें हो गई हैं!</p>
+                <p>ग्रिड: <span id="gridSizeDisplay">4x4</span></p>
             </div>
             <hr size="1" />
             <div class="model-row">
                 <div class="countdown">
-                    Next puzzle in: <span id="countdownTimer">00:00:00</span>
+                    नए शब्द: <span id="countdownTimer">00:00:00</span>
                 </div>
                 <div style="min-width: 50%; padding-left: 10px; margin: auto;" id="rowShare">
                     <button class="share-button" style="width: 90%;" id="btnShare" onclick="shareResult()">
-                        Share Result
+                        साझा करें
                     </button>
                 </div>
             </div>
@@ -709,27 +711,28 @@
 
         function readGridParam() {
 
+            let paramVal = 0;
             try {
                 const params = window.location.search.split('&');
                 params.forEach(element => {
                     if (element.endsWith('q=3')) {
-                        return 3;
+                        paramVal = 3;
                     } else if (element.endsWith('q=4')) {
-                        return 4;
+                        paramVal = 4;
                     }
                 });
             } catch (error) {
                 // do nothing 
             }
 
-            return 0;
+            return paramVal;
         }
 
         function initializeFromCookies() {
 
             // Read cookie values
-            const darkMode = getValue('darkMode', 'false') === 'true';
-            const threeMode = getValue('threeMode', 'false') === 'true';
+            let darkMode = getValue('darkMode', 'false') === 'true';
+            let threeMode = getValue('threeMode', 'false') === 'true';
 
             // Set toggle switches
             const darkModeToggle = document.getElementById('darkModeToggle');
