--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
             z-index: 1000;
             padding: 1rem;
             color: var(--text-color);
+            overflow:auto;
         }
 
         .left-sidebar {
