Clean up and start index

--- a/clean.html
+++ b/clean.html
@@ -22,6 +22,9 @@
             window.localStorage.setItem('userGrid3', '');
             window.localStorage.setItem('userGrid4', '');
 
+            window.localStorage.setItem('orgGrid3', '');
+            window.localStorage.setItem('orgGrid4', '');
+
         }
         </script>
 </body>
