--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
         </div>
         <div>
             <hr />
-            <span class="sub-heading">Acknowledgement:</span><br>
+            <span class="sub-heading">Game Concept By:</span><br>
             <div style="padding-left: 20px;">
                 <ul>
                     <li><span>Rahul Upadhyaya, Seattle</span></li>
