--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             --nav-bg: #f8f9fa;
             --sidebar-bg: #ffffff;
             --selected-item: #0f0f0f;
-            --selected-text: #889487;
+            --selected-item2: #f8b705;
+            --selected-text: #5f5f5f;
+            --selected-text2:#0f0f0f;
             --correct-item-bg: #98FB98;
             --border-color: #dee2e6;
             --hover-color: #007bff;
@@ -38,7 +40,9 @@
             --nav-bg: #222222;
             --sidebar-bg: #2c2c2c;
             --selected-item: #b1a3a3;
-            --selected-text: #0a0a0a;
+            --selected-item2: #f8b705;
+            --selected-text: #0f0f0f;
+            --selected-text2: #0f0f0f;
             --border-color: #444444;
             --hover-color: #66b0ff;
             --secondary-bg-color: #444444;
@@ -340,6 +344,11 @@
         .grid-item.selected {
             background-color: var(--selected-item);
             color: var(--selected-text);
+        }
+
+        .grid-item.selected2 {
+            background-color: var(--selected-item2);
+            color: var(--selected-text2);
         }
 
         .grid-item.disabled {
@@ -734,8 +743,9 @@
             mindCheckMode = document.getElementById('mindCheckToggle').checked;
 
 
-            Array.from(document.getElementsByClassName("selected")).forEach(function (item) {
+            Array.from(document.getElementsByClassName("grid-item")).forEach(function (item) {
                 item.classList.remove('selected');
+                item.classList.remove('selected2');
             });
 
             selectedItem = null;
